--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-# VITE_BACKEND_URL = http://localhost:5500/
-VITE_BACKEND_URL = https://pizzabackend-00xb.onrender.com/
+VITE_BACKEND_URL = http://localhost:5500/
+# VITE_BACKEND_URL = https://pizzabackend-00xb.onrender.com/
