--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-# VITE_BACKEND_URL = http://localhost:5500/
-VITE_BACKEND_URL = https://pizzabackend-00xb.onrender.com/
+VITE_BACKEND_URL = http://localhost:5500/
+# VITE_BACKEND_URL = https://pizzabackend-00xb.onrender.com/
+
+VITE_RAZORPAY_KEY_ID = rzp_live_4PmCSlWSTIfrBI
